#546 [FIX] 앱바의 z-index 1로 수정

--- a/src/components/AppBar/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar/AppBar.module.css
@@ -8,6 +8,7 @@
   background-color: white;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 .title {
